frontend/symbolcompiler/lib/grammars/ExprParser.js
// Generated from Expr.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import ExprListener from './ExprListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ExprParser extends antlr4.Parser {

    static grammarFileName = "Expr.g4";
    static literalNames = [ null, "'<'", "'>'", "'*'", "'/'", "'-'", "'+'", 
                            "'or'", "'and'", "'~'", "'funct'", "';'", "'='", 
                            "','", "'('", "')'", "'{'", "'}'", "'triple_equal'", 
                            "'four_dots_around_cross'", "'four_dots_around_add'", 
                            "'left_triangle'", "'undertie'", "'two_asterisk'", 
                            "'left_arrow'", "'phi'", "'circle'", null, "'inverted_qmark'", 
                            "'sigma'", "'music'", "'triple_slash'", "'omega'", 
                            "'square'", "'two_tie'", "'two_vertical_plus'", 
                            "'right_arrow'", "'theta'", "'sleeping_eight'", 
                            "'pentagon'", "'write'" ];
    static symbolicNames = [ null, "LESS", "GREATER", "MULS", "DIVIDES", 
                             "MINUS", "PLUS", "OR", "AND", "NOT", "DEF", 
                             "SC", "EQ", "COMMA", "LPAREN", "RPAREN", "LCURLY", 
                             "RCURLY", "CONST", "FALSE", "TRUE", "READ", 
                             "BREAK", "STRING", "ELSE", "FOR", "INT", "INTEGER", 
                             "RETURN", "WHILE", "FUNCTION", "COMMENT", "BOOL", 
                             "CHAR", "CONTINUE", "FLOAT", "IF", "NONE", 
                             "VOID", "PROGRAM", "WRITE", "ID", "WS" ];
    static ruleNames = [ "program", "stat", "varDecl", "funcDecl", "paramList", 
                         "readStat", "writeStat", "ifStat", "whileStat", 
                         "idops", "for", "type", "relop", "expr", "func" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ExprParser.ruleNames;
        this.literalNames = ExprParser.literalNames;
        this.symbolicNames = ExprParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 13:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 7);
    		case 1:
    			return this.precpred(this._ctx, 6);
    		case 2:
    			return this.precpred(this._ctx, 5);
    		case 3:
    			return this.precpred(this._ctx, 4);
    		case 4:
    			return this.precpred(this._ctx, 3);
    		case 5:
    			return this.precpred(this._ctx, 2);
    		case 6:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ExprParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this.stat();
	        this.state = 31;
	        this.match(ExprParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stat() {
	    let localctx = new StatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ExprParser.RULE_stat);
	    try {
	        this.state = 54;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 33;
	            this.varDecl();
	            this.state = 34;
	            this.match(ExprParser.SC);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 36;
	            this.expr(0);
	            this.state = 37;
	            this.match(ExprParser.SC);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 39;
	            this.funcDecl();
	            this.state = 40;
	            this.match(ExprParser.SC);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 42;
	            this.ifStat();
	            this.state = 43;
	            this.match(ExprParser.SC);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 45;
	            this.whileStat();
	            this.state = 46;
	            this.match(ExprParser.SC);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 48;
	            this.readStat();
	            this.state = 49;
	            this.match(ExprParser.SC);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 51;
	            this.writeStat();
	            this.state = 52;
	            this.match(ExprParser.SC);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDecl() {
	    let localctx = new VarDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ExprParser.RULE_varDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this.type();
	        this.state = 57;
	        this.match(ExprParser.ID);
	        this.state = 58;
	        this.match(ExprParser.EQ);
	        this.state = 59;
	        this.expr(0);
	        this.state = 60;
	        this.match(ExprParser.SC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcDecl() {
	    let localctx = new FuncDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ExprParser.RULE_funcDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.match(ExprParser.DEF);
	        this.state = 63;
	        this.match(ExprParser.ID);
	        this.state = 64;
	        this.match(ExprParser.LPAREN);
	        this.state = 65;
	        this.paramList();
	        this.state = 66;
	        this.match(ExprParser.RPAREN);
	        this.state = 67;
	        this.match(ExprParser.LCURLY);
	        this.state = 71;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 738199040) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 793) !== 0)) {
	            this.state = 68;
	            this.stat();
	            this.state = 73;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 74;
	        this.match(ExprParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramList() {
	    let localctx = new ParamListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ExprParser.RULE_paramList);
	    var _la = 0;
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	        case 32:
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 76;
	            this.type();
	            this.state = 77;
	            this.match(ExprParser.ID);
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===13) {
	                this.state = 78;
	                this.match(ExprParser.COMMA);
	                this.state = 79;
	                this.type();
	                this.state = 80;
	                this.match(ExprParser.ID);
	                this.state = 86;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	readStat() {
	    let localctx = new ReadStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ExprParser.RULE_readStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(ExprParser.ID);
	        this.state = 91;
	        this.match(ExprParser.EQ);
	        this.state = 92;
	        this.match(ExprParser.READ);
	        this.state = 93;
	        this.match(ExprParser.LPAREN);
	        this.state = 94;
	        this.match(ExprParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	writeStat() {
	    let localctx = new WriteStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ExprParser.RULE_writeStat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(ExprParser.WRITE);
	        this.state = 97;
	        this.match(ExprParser.LPAREN);
	        this.state = 105;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	        case 23:
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===23) {
	                this.state = 98;
	                this.match(ExprParser.STRING);
	                this.state = 103;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        case 26:
	        case 32:
	        case 35:
	            this.state = 104;
	            this.type();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 107;
	        this.match(ExprParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStat() {
	    let localctx = new IfStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ExprParser.RULE_ifStat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(ExprParser.IF);
	        this.state = 110;
	        this.match(ExprParser.LPAREN);
	        this.state = 111;
	        this.expr(0);
	        this.state = 112;
	        this.match(ExprParser.RPAREN);
	        this.state = 113;
	        this.match(ExprParser.LCURLY);
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 738199040) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 793) !== 0)) {
	            this.state = 114;
	            this.stat();
	            this.state = 119;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 120;
	        this.match(ExprParser.RCURLY);
	        this.state = 121;
	        this.match(ExprParser.ELSE);
	        this.state = 125;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 738199040) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 793) !== 0)) {
	            this.state = 122;
	            this.stat();
	            this.state = 127;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileStat() {
	    let localctx = new WhileStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ExprParser.RULE_whileStat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(ExprParser.WHILE);
	        this.state = 129;
	        this.match(ExprParser.LPAREN);
	        this.state = 130;
	        this.expr(0);
	        this.state = 131;
	        this.match(ExprParser.RPAREN);
	        this.state = 132;
	        this.match(ExprParser.LCURLY);
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 738199040) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 793) !== 0)) {
	            this.state = 133;
	            this.stat();
	            this.state = 138;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 139;
	        this.match(ExprParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idops() {
	    let localctx = new IdopsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ExprParser.RULE_idops);
	    try {
	        this.state = 155;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 141;
	            this.match(ExprParser.ID);
	            this.state = 142;
	            this.match(ExprParser.PLUS);
	            this.state = 143;
	            this.match(ExprParser.PLUS);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 144;
	            this.match(ExprParser.ID);
	            this.state = 145;
	            this.match(ExprParser.MINUS);
	            this.state = 146;
	            this.match(ExprParser.MINUS);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 147;
	            this.match(ExprParser.ID);
	            this.state = 148;
	            this.match(ExprParser.PLUS);
	            this.state = 149;
	            this.match(ExprParser.EQ);
	            this.state = 150;
	            this.match(ExprParser.ID);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 151;
	            this.match(ExprParser.ID);
	            this.state = 152;
	            this.match(ExprParser.MINUS);
	            this.state = 153;
	            this.match(ExprParser.EQ);
	            this.state = 154;
	            this.match(ExprParser.ID);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	for_() {
	    let localctx = new ForContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ExprParser.RULE_for);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(ExprParser.FOR);
	        this.state = 158;
	        this.match(ExprParser.LPAREN);
	        this.state = 159;
	        this.varDecl();
	        this.state = 160;
	        this.match(ExprParser.SC);
	        this.state = 161;
	        this.expr(0);
	        this.state = 162;
	        this.match(ExprParser.SC);
	        this.state = 163;
	        this.idops();
	        this.state = 164;
	        this.match(ExprParser.RPAREN);
	        this.state = 165;
	        this.match(ExprParser.LCURLY);
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 738199040) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 793) !== 0)) {
	            this.state = 166;
	            this.stat();
	            this.state = 171;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 172;
	        this.match(ExprParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ExprParser.RULE_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        _la = this._input.LA(1);
	        if(!(((((_la - 26)) & ~0x1f) === 0 && ((1 << (_la - 26)) & 577) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relop() {
	    let localctx = new RelopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ExprParser.RULE_relop);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 176;
	            this.match(ExprParser.LESS);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 177;
	            this.match(ExprParser.GREATER);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 178;
	            this.match(ExprParser.EQ);
	            this.state = 179;
	            this.match(ExprParser.EQ);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 180;
	            this.match(ExprParser.LESS);
	            this.state = 181;
	            this.match(ExprParser.EQ);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 182;
	            this.match(ExprParser.GREATER);
	            this.state = 183;
	            this.match(ExprParser.EQ);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 26;
	    this.enterRecursionRule(localctx, 26, ExprParser.RULE_expr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 41:
	            this.state = 187;
	            this.match(ExprParser.ID);
	            break;
	        case 27:
	            this.state = 188;
	            this.match(ExprParser.INTEGER);
	            break;
	        case 9:
	            this.state = 189;
	            this.match(ExprParser.NOT);
	            this.state = 190;
	            this.expr(8);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 217;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 215;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 193;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 194;
	                    this.match(ExprParser.AND);
	                    this.state = 195;
	                    this.expr(8);
	                    break;

	                case 2:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 196;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 197;
	                    this.match(ExprParser.OR);
	                    this.state = 198;
	                    this.expr(7);
	                    break;

	                case 3:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 199;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 200;
	                    this.match(ExprParser.PLUS);
	                    this.state = 201;
	                    this.expr(6);
	                    break;

	                case 4:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 202;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 203;
	                    this.match(ExprParser.MINUS);
	                    this.state = 204;
	                    this.expr(5);
	                    break;

	                case 5:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 205;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 206;
	                    this.match(ExprParser.DIVIDES);
	                    this.state = 207;
	                    this.expr(4);
	                    break;

	                case 6:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 208;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 209;
	                    this.match(ExprParser.MULS);
	                    this.state = 210;
	                    this.expr(3);
	                    break;

	                case 7:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 211;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 212;
	                    this.relop();
	                    this.state = 213;
	                    this.expr(2);
	                    break;

	                } 
	            }
	            this.state = 219;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	func() {
	    let localctx = new FuncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ExprParser.RULE_func);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this.match(ExprParser.ID);
	        this.state = 221;
	        this.match(ExprParser.LPAREN);
	        this.state = 222;
	        this.expr(0);
	        this.state = 227;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===13) {
	            this.state = 223;
	            this.match(ExprParser.COMMA);
	            this.state = 224;
	            this.expr(0);
	            this.state = 229;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 230;
	        this.match(ExprParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

ExprParser.EOF = antlr4.Token.EOF;
ExprParser.LESS = 1;
ExprParser.GREATER = 2;
ExprParser.MULS = 3;
ExprParser.DIVIDES = 4;
ExprParser.MINUS = 5;
ExprParser.PLUS = 6;
ExprParser.OR = 7;
ExprParser.AND = 8;
ExprParser.NOT = 9;
ExprParser.DEF = 10;
ExprParser.SC = 11;
ExprParser.EQ = 12;
ExprParser.COMMA = 13;
ExprParser.LPAREN = 14;
ExprParser.RPAREN = 15;
ExprParser.LCURLY = 16;
ExprParser.RCURLY = 17;
ExprParser.CONST = 18;
ExprParser.FALSE = 19;
ExprParser.TRUE = 20;
ExprParser.READ = 21;
ExprParser.BREAK = 22;
ExprParser.STRING = 23;
ExprParser.ELSE = 24;
ExprParser.FOR = 25;
ExprParser.INT = 26;
ExprParser.INTEGER = 27;
ExprParser.RETURN = 28;
ExprParser.WHILE = 29;
ExprParser.FUNCTION = 30;
ExprParser.COMMENT = 31;
ExprParser.BOOL = 32;
ExprParser.CHAR = 33;
ExprParser.CONTINUE = 34;
ExprParser.FLOAT = 35;
ExprParser.IF = 36;
ExprParser.NONE = 37;
ExprParser.VOID = 38;
ExprParser.PROGRAM = 39;
ExprParser.WRITE = 40;
ExprParser.ID = 41;
ExprParser.WS = 42;

ExprParser.RULE_program = 0;
ExprParser.RULE_stat = 1;
ExprParser.RULE_varDecl = 2;
ExprParser.RULE_funcDecl = 3;
ExprParser.RULE_paramList = 4;
ExprParser.RULE_readStat = 5;
ExprParser.RULE_writeStat = 6;
ExprParser.RULE_ifStat = 7;
ExprParser.RULE_whileStat = 8;
ExprParser.RULE_idops = 9;
ExprParser.RULE_for = 10;
ExprParser.RULE_type = 11;
ExprParser.RULE_relop = 12;
ExprParser.RULE_expr = 13;
ExprParser.RULE_func = 14;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_program;
    }

	stat() {
	    return this.getTypedRuleContext(StatContext,0);
	};

	EOF() {
	    return this.getToken(ExprParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof ExprListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ExprListener ) {
	        listener.exitProgram(this);
		}
	}


}



class StatContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_stat;
    }

	varDecl() {
	    return this.getTypedRuleContext(VarDeclContext,0);
	};

	SC() {
	    return this.getToken(ExprParser.SC, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	funcDecl() {
	    return this.getTypedRuleContext(FuncDeclContext,0);
	};

	ifStat() {
	    return this.getTypedRuleContext(IfStatContext,0);
	};
